src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail09.jova
class Test{

  public int print(int x){
    return 0;
  }

  public int print(String y){
       return 0;
     }

  public int print(bool y){
         return 0;
       }

  public int print(bool y, int x){
            return 0;
          }
}

class Main {

  public int main() {

    return 0;
  }

}